poceo pisati biljeske

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -52,6 +52,13 @@
     \end{centering}
 }
 
+\setbeameroption{hide notes}
+%\setbeameroption{show only notes}
+%\usepackage{pgfpages}
+%\setbeameroption{show notes on second screen=left}
+
+%%%%%
+
 %%%%% serif font kao default
 \usefonttheme{serif}
 %%%%%
@@ -110,9 +117,17 @@
     \begin{itemize}
         \item tradicionalni način ispitivanja --- faktorijalni eksperimenti
 
+        \note[item]{klasični oblik ispitivanja u eksperimentalnoj kognitivnoj
+            psihologiji}
+
+        \note[item]{primjerice, ispitivanje frekvencije --- česte i rijetke
+        riječi, dvije eksperimentalne situacije}
+
         \pause
 
         \item \textit{megastudy}: velika istraživanja procesiranja jezika
+
+        \note[item]{dobrovoljcima se prikazuju stotine ili tisuće podražaja}
 
         \pause
 
@@ -121,6 +136,8 @@
             balotaMegastudiesWhatMillions2012}
             \begin{itemize}
                 \item izjednačavanje podražaja na relevantnim dimenzijama
+                \note[item]{spomenuti međukorelacije različitih leksičkih i
+                    psiholingvističkih karakteristika}
                 \item korištenje kontinuiranih umjesto kategorijalnih mjera
             \end{itemize}
     \end{itemize}
@@ -141,6 +158,10 @@
 
         \item omogućavaju provođenje virtualnih eksperimenata
             \tinycitep{kupermanVirtualExperimentsMegastudies2015}
+
+        \note[item]{specificirati selekcijske kriterije za riječi; izvući N
+        uzoraka iz megastudy baze; provjeriti kolika je vjerojatnost dobivanja
+        nekog teoretski relevantnog obrasca rezultata}
 
         \pause
 
@@ -194,14 +215,30 @@
             \item generalizacija nalaza na cjelokupni jezik
                 \tinycitep{yarkoniGeneralizabilityCrisis2019}
 
+            \note[item]{Yarkonijeva kritika pretjeranog generaliziranja nalaza
+                psihologijskih istraživanja; provede se istraživanje s jednim
+                video podražajem, a radi se velike generalizacije o prirodi
+                konstrukata}
+
             \pause
 
             \item ,,prototipno'' testiranje hipoteza
+
+            \note[items]{prije nego se krene u potencijalno skupo prikupljanje
+                podataka, može se dobiti dojam o tom ima li smisla uopće ići u
+                prikupljanje podataka; nazire li se neki trend u već postojećim
+                podacima? povezati s virtualnim eksperimentima i testiranjem
+                novih varijabli/mjera}
 
             \pause
 
             \item preciznija procjena parametara i prijatelji
                 \tinycitep{yarkoniChoosingPredictionExplanation2017}
+
+            \note[item]{jasno je da veći set podataka daje uži interval
+                pouzdanosti; no, osim toga, veliki setovi podataka omogućavaju
+                kros-validaciju, a to je bitno za izradu modela koji trebaju
+                služiti predviđanju ičega}
         \end{itemize}
 
     \end{itemize}
@@ -388,7 +425,7 @@
                 \item ,,[R]esearchers can perform a reasonable analysis
                     given their assumptions and their data, but had the data
                     turned out differently, they could have done other analyses
-                    that were just as reasonable in those circumstances''
+                    that were just as reasonable in those circumstances.''
                     (str. 1)
 
                 \pause
