--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -330,6 +330,9 @@
 
         \item \citet{ratcliffDiffusionModelAccount2004} pokazali su osjetljivost
             modela na frekvencije riječi
+
+        \note[item]{proveli 9 eksperimenata u kojima su varirali učestalost
+            riječi i vrstu ne-riječi}
     \end{itemize}
 \end{frame}
 
@@ -351,6 +354,12 @@
         \item optimalno ponašanje ovisi o konkretnom zadatku koji opažač treba
             obaviti
 
+        \note[item]{kritika drugim modelima da uglavnom efekt frekvencije
+            objašnjavaju kroz neki \textit{task-specific demand} ili sličan
+            parametar koji je, naizgled, ubačen samo zato jer je to važan efekt
+            koji treba objasniti, a ne zato što je netko zapravo sjeo i
+            razmislio o principima koji bi trebali biti u podlozi}
+
         \item podaci koje opažač dobiva u sebi imaju šum, zbog čega mogu nastati
             pogreške u izvršavanju zadatka
 
@@ -358,6 +367,11 @@
 
         \item uspješno lovi učinak frekvencije riječi, te učinak ortografske
             sličnosti (?)
+
+        \note[item]{replicira neke nalaze koji su pronađeni u eksperimentima,
+            ali koji ne odgovaraju nalazima megastudija koje sam ja vidio;
+            konkretno, istraživanja su pronašla da visoka gustoća inhibira u
+            zadatku identifikacije, ali facilitira u zadatku leksičke odluke}
     \end{itemize}
 \end{frame}
 
@@ -407,13 +421,21 @@
 
         \pause
 
+        \note[item]{oko tisuću sudionika iz akademske zajednice psihologa}
+
+        \note[item]{pitali koliko često su oni provodili upitne prakse, što
+            misle koliko njihovih kolega jeste i slično}
+
+        \note[item]{kretalo se od toga da nisu prijavili sve zavisne mjere do
+            toga da su fabricirali podatke}
+
         \begin{itemize}
             \item nisu naveli sve zavisne varijable
             
             \item nisu naveli sve eksperimentalne situacije
 
             \item isključivanje podataka nakon što su pogledali kako to utječe
-                na rezulate
+                na rezultate
         \end{itemize}
 
         \pause
@@ -500,6 +522,10 @@
 \begin{frame}
     \centering
     \includegraphics[scale=.25]{orben.png}
+
+    \note[item]{N > 70000}
+    \note[item]{\(\beta = -0.005\)}
+    \note[item]{crveno označava \(\beta\) koje nisu statistički značajne}
 
     \tinycitep{orbenAssociationAdolescentWellbeing2019}
 \end{frame}
