dodao silberzahn sliku

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -135,10 +135,10 @@
             \tinycitep{keuleersMegastudiesCrowdsourcingLarge2015,
             balotaMegastudiesWhatMillions2012}
             \begin{itemize}
+                \item korištenje kontinuiranih umjesto kategorijalnih mjera
                 \item izjednačavanje podražaja na relevantnim dimenzijama
                 \note[item]{spomenuti međukorelacije različitih leksičkih i
                     psiholingvističkih karakteristika}
-                \item korištenje kontinuiranih umjesto kategorijalnih mjera
             \end{itemize}
     \end{itemize}
 \end{frame}
@@ -360,6 +360,8 @@
             koji treba objasniti, a ne zato što je netko zapravo sjeo i
             razmislio o principima koji bi trebali biti u podlozi}
 
+        \pause
+
         \item podaci koje opažač dobiva u sebi imaju šum, zbog čega mogu nastati
             pogreške u izvršavanju zadatka
 
@@ -431,6 +433,10 @@
 
         \begin{itemize}
             \item nisu naveli sve zavisne varijable
+
+            \note[item]{60\% ne navodi sve ZV; 25\% ne navodi sve
+                eksperimentalne situacije; 40\% gleda kako isključivanje
+                podataka utječe na rezultate}
             
             \item nisu naveli sve eksperimentalne situacije
 
@@ -480,16 +486,15 @@
                 \item 29 istraživačkih timova analiziralo je isti set
                     podataka
 
-                \pause
-
-                \item 29 različitih načina na koje su podaci analizirani
-
-                \pause
-
-                \item ,,dva'' različita zaključka
             \end{itemize}
 
     \end{enumerate}
+\end{frame}
+
+\begin{frame}
+    \begin{center}
+        \includegraphics[scale=0.35]{silberzahn.pdf}
+    \end{center}
 \end{frame}
 
 \subsection{\textit{Multiverse} analize}
