maknuo ? za ortografsku slicnost

--- a/beamer/megastudije-multiverse.tex
+++ b/beamer/megastudije-multiverse.tex
@@ -368,7 +368,7 @@
         \pause
 
         \item uspješno lovi učinak frekvencije riječi, te učinak ortografske
-            sličnosti (?)
+            sličnosti
 
         \note[item]{replicira neke nalaze koji su pronađeni u eksperimentima,
             ali koji ne odgovaraju nalazima megastudija koje sam ja vidio;
